button color changes made

--- a/styles.css
+++ b/styles.css
@@ -160,8 +160,8 @@ nav {
 }
 
 .nav__link--anchor-primary {
-    background-color: green;
-    border-color: green;
+    background-color: darkred;
+    border-color: darkred;
     padding: 8px 20px;
     border-radius: 50px;
     color: black;
@@ -169,7 +169,7 @@ nav {
 }
 
 .nav__link--anchor-primary:hover {
-    background-color: purple;
+    background-color: rgb(185, 1, 10);
     color: white;
     transition: all 0.3s ease;
     align-items: center;
