changing css and adding to descriptions

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@
 
 
 * {
-    color: rgb(191, 10, 197);
     font-family: 'Lato', sans-serif;
     padding: 0;
     margin: 0;
@@ -14,6 +13,40 @@
 
 html {
     scroll-behavior: smooth;
+}
+
+
+#services{
+    padding: 2rem;
+    text-align: center;
+    
+}
+.services__container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 2rem;
+  margin-top: 1.5rem;
+
+}
+
+.service__card{
+    background-color: #708090;
+    border: 1px solid rgba(225, 225, 225, 0.1);
+    border-radius: 12px;
+    padding: 1.5rem;
+    max-width: 300px;
+    transition: transform 300ms ease;
+    box-shadow: 0 0 12px rgba(0, 255, 255, 0.1);
+}
+
+.service__card:hover{
+    transform: translateY(-5px);
+    box-shadow: 0 0 16px #0e0e0e;
+}
+
+.client__feedback{
+    margin-top: 100px;
 }
 
 h1,
